--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -71,7 +71,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:onClick="advent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
