--- a/app/src/main/res/layout/activity_advent.xml
+++ b/app/src/main/res/layout/activity_advent.xml
@@ -21,7 +21,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
