--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -54,7 +54,7 @@
                         android:layout_height="35dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:src="@drawable/FFTeamnew"/>
 
                     <TextView
                         android:layout_width="match_parent"
