ADD ICON AND DISIGN

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,8 @@
         <item name="colorPrimary">@color/common_google_signin_btn_text_dark_disabled</item>
         <item name="colorPrimaryDark">@color/common_google_signin_btn_text_dark_disabled</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorForeground">@color/foreground_material_dark</item>
+        <item name="android:colorBackground">@color/background_material_dark</item>
         <!-- Customize your theme here. -->
     </style>
 
