--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:background="#FFF">
+        android:background="#FFFFFFCC">
 
         <include
             android:id="@+id/toolbar"
@@ -61,7 +61,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -69,7 +69,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:src="@drawable/rs_abdul_moeloek"/>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -92,7 +92,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -100,7 +100,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@drawable/logo_advent" />
+                        android:src="@drawable/rs_advent" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -122,7 +122,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -130,7 +130,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/rs_imanuel" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -159,7 +159,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -167,7 +167,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/rs_a_dadi_tjokrodipo" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -189,7 +189,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -197,7 +197,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/rs_urip_sumoharjo" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -219,7 +219,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -256,7 +256,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -264,7 +264,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/rs_graha_husada" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -286,7 +286,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -294,7 +294,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/rs_pertamina_bintang_amin" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -316,7 +316,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/round_bg"
+                    android:background="@drawable/bg_menu"
                     android:orientation="vertical">
 
                     <ImageView
@@ -324,7 +324,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/rs_bumi_waras" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -367,6 +367,7 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="#CCCCCC"
         android:layout_gravity="start"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi" />
