--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="190dp"
-                android:background="#00B16A"
+                android:background="#E6E6E6"
                 android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
