--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -369,6 +369,7 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="#CCCCCC"
         android:layout_gravity="start"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi" />
