--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -2,12 +2,10 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".MenuUtama.Drawer">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,14 +35,18 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:background="@drawable/round_bg">
-            <ImageView
+            android:orientation="horizontal">
+            <ViewFlipper
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/icon_splash"/>
+                android:layout_height="200dp"
+                android:layout_centerVertical = "true"
+                android:id="@+id/v_flipper"></ViewFlipper>
         </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="20dp">
+            </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -367,7 +369,6 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="#CCCCCC"
         android:layout_gravity="start"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi" />
